# more_tech_5_team007

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/src/: asgi.py  celery.py  settings.py  urls.py
backend/src/core/: admin.py  urls.py
backend/src/core/choices/: atm_statuses.py  days_of_week.py  office_status.py  service_modes.py
backend/src/core/filters/: atm.py  office.py  schedules.py  services.py
backend/src/core/migrations/: 0001_initial.py  0003_atm_status.py  0004_atm_workloads_office_workloads.py  002_fill_data.py
backend/src/core/models/: __init__.py  atm.py  atm_service.py  atm_services.py  office.py  schedule.py
backend/src/core/serializers/: __init__.py  atm.py  atm_services.py  efficient_search_input_data.py  offices.py  prioritised_data.py  schedules.py
backend/src/core/services/efficient_search/: efficient_search_atm.py  efficient_search_office.py
backend/src/core/services/efficient_search/factories/: atms.py  offices.py
backend/src/core/services/time_serials/: time_series.py
backend/src/core/services/time_serials/factories/history/: atm_history.py  office_history.py
backend/src/core/views/: __init__.py  atm.py  atm_services.py  office.py  sheduler.py
